# reschebnik

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: clear_data.py  run_parser.py
src/common/: config.py
src/common/database/: connection.py
src/parser/: config.py  main.py  parser_core.py  storage.py
src/reschebnik.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
