[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reschebnik"
version = "0.1.0"
description = "Решебник для ЕГЭ по информатике"

[project.optional-dependencies]
parser = ["Selenium"]
bot = ["aiogram"]
database = ["asyncpg", "Databases"]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "src"